--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -3,6 +3,23 @@ html, body {
   height: 100%;
 }
 
-body{
+body {
   background-color: #f5f5f5;
+}
+
+.left-side {
+  position: absolute;
+  z-index: 2;
+  width: 200px;
+  height: 100%;
+  top: 0;
+  left: 0;
+  padding: 10px 16px;
+}
+
+.content-body {
+  position: relative;
+  padding-left: 216px;
+  padding-top: 10px;
+  height: 100%;
 }
